// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`pipeline e2e complex-types fixture generates expected types 1`] = `
"// Auto-generated by @electron-ipc-controller/vite-plugin
// Do not edit manually

export type AnotherType = {
    key: boolean;
    key2: string;
};

export type ComplexInput = {
    nested: {
        [k: string]: number;
    };
    another: AnotherType;
};

export interface IpcApi {
    types: {
      test(input: ComplexInput): Promise<boolean>;
    };
}

declare global {
  interface Window {
    ipc: IpcApi;
  }
}

export {};
"
`;

exports[`pipeline e2e simple fixture generates expected types 1`] = `
"// Auto-generated by @electron-ipc-controller/vite-plugin
// Do not edit manually



export interface IpcApi {
    counter: {
      getCount(): Promise<number>;
      inc(amount?: number): Promise<number>;
      reset(): void;
    };
}

declare global {
  interface Window {
    ipc: IpcApi;
  }
}

export {};
"
`;

exports[`pipeline e2e nest-module fixture generates expected types 1`] = `
"// Auto-generated by @electron-ipc-controller/vite-plugin
// Do not edit manually



export interface IpcApi {
    counter: {
      getCount(): Promise<number>;
      inc(amount?: number): Promise<number>;
      reset(): void;
    };
}

declare global {
  interface Window {
    ipc: IpcApi;
  }
}

export {};
"
`;
